kube/app-ospedale-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose_kompose.yml convert --out kube
    kompose.service.type: nodeport
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app-ospedale
  name: app-ospedale
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app-ospedale
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose_kompose.yml convert --out kube
        kompose.service.type: nodeport
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: app-ospedale
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: admin
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://dbpostgresql-ospedale:5432/ospedale
            - name: SPRING_DATASOURCE_USERNAME
              value: admin
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
            - name: SPRING_RABBITMQ_HOST
              value: rabbitmq
            - name: SPRING_RABBITMQ_PASSWORD
              value: guest
            - name: SPRING_RABBITMQ_PORT
              value: "5672"
            - name: SPRING_RABBITMQ_USERNAME
              value: guest
          image: marcoscale98/taass:ospedale
          name: microservizio-ospedale
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/ospedale
              name: ospedale-data
      restartPolicy: Always
      volumes:
        - name: ospedale-data
          persistentVolumeClaim:
            claimName: ospedale-data
status: {}
