kube/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose_kompose.yml convert --out kube
    kompose.service.type: NodePort
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ports:
    - name: "8079"
      port: 8079
      targetPort: 8079
  selector:
    io.kompose.service: api-gateway
  type: NodePort
status:
  loadBalancer: {}
