kube/app-utente-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose_kompose.yml convert --out kube
    kompose.service.type: NodePort
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: app-utente
  name: app-utente
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: app-utente
  type: NodePort
status:
  loadBalancer: {}
