kube/dbpostgresql-ospedale-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose_kompose.yml convert --out kube
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dbpostgresql-ospedale
  name: dbpostgresql-ospedale
spec:
  ports:
    - name: "5434"
      port: 5434
      targetPort: 5432
  selector:
    io.kompose.service: dbpostgresql-ospedale
status:
  loadBalancer: {}
