kube/ospedale-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ospedale-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ospedale-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ospedale-net: "true"
